--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -13,12 +13,14 @@
 	crossorigin="anonymous">
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js"></script>
-<script
-	src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>
 <link
 	href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
 	rel="stylesheet">
+
+<script
+	src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>
 <link rel="stylesheet" href="css/app/app.css" />
+
 <title>Indiabulls AMC NAV Data</title>
 </head>
 <body ng-app="demo" id="grad1">
